# WasmKit

./: .codecov.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .spi.yml  .swift-format  .swiftlint.yml  .travis.yml  CMakeLists.txt  Gemfile  Jenkinsfile  LICENSE  Makefile  Mintfile  NOTICE.txt  Package.resolved  Package.swift  Package@swift-6.1.swift  Package@swift-6.2.swift  README.md  TODO.md  codecov.yml  eh_bench.md
Sources/: CMakeLists.txt
Sources/CLI/: CLI.swift  CMakeLists.txt  DebuggerServer.swift  main.swift
Sources/CLI/Commands/: Assemble.swift  Explore.swift  Parse.swift  Run.swift  Wat2wasm.swift
Sources/CLI/Run/: Run.swift  RunCommand.swift
Sources/CLI/SpecTest/: SpecTestCommand.swift  Spectest.swift  TestCase.swift
Sources/CLICommands/: CMakeLists.txt  DebuggerServer.swift  Explore.swift  Parse.swift  Platform.swift  Run.swift  Wasm2wat.swift  WasmFeatureOptions.swift  Wat2wasm.swift
Sources/CSystemExtras/include/: clock.h
Sources/ComponentLinker/: ComponentTypeSerializer.swift
Sources/ComponentModel/: ComponentBinaryFormat.swift  ComponentRepresentation.swift  ComponentType.swift
Sources/GDBRemoteProtocol/: CommandDecoder.swift  GDBHostCommand.swift  GDBHostCommandDecoder.swift  GDBPacket.swift  GDBTargetResponse.swift  GDBTargetResponseEncoder.swift  ResponseEncoder.swift  TargetResponse.swift
Sources/LLDBRemoteProtocol/: CommandDecoder.swift  HostCommand.swift  Package.swift  ResponseEncoder.swift  TargetResponse.swift
Sources/LLVMBackend/: CMakeLists.txt  CodegenContext.swift  IRContext+codegen.swift  IRFunctionVisitor.swift  LLInstance.swift  LLStore.swift  Linker.swift  Loader.swift  Wasm32Memory.swift
Sources/LLVMBackendCLI/: CMakeLists.txt  Entrypoint.swift
Sources/LLVMInterop/: CMakeLists.txt  IRContext.cpp
Sources/LLVMInterop/IR/: IRFunction.cpp  IRPHINode.cpp
Sources/LLVMInterop/include/: IRBlock.h  IRContext.h  IRFunction.h  IRFunctionType.h  IRPHINode.h  IRPointerType.h  IRType.h  IRValue.h  module.modulemap
Sources/Parser/: ParserError.swift
Sources/Parser/Stream/: ByteStream.swift  FileHandleStream.swift  Stream.swift
Sources/Parser/Types/: ParserError.swift
Sources/Spectest/: Spectest.swift  TestCase.swift
Sources/Swasm/: Instruction.swift  Module.swift  Parser.swift  Runtime.swift  Stream.swift  Swasm.swift  Types.swift  Validation.swift
Sources/Swasm/ANTLR/: WAST.g4
Sources/Swasm/Parser/: CharacterSet.swift  Digit.swift  Parser.swift  Stream.swift  WASMParser.swift
Sources/Swasm/Structure/: Instruction.swift  Module.swift  Types.swift
Sources/Swasm/Utility/: ModuleInitialzation.swift
Sources/Swasm/WASM/: WASMParser.swift
Sources/Swasm/WAST/: Lexer.swift  Parser.swift  ParserCombinator.swift  Stream.swift  WASTLexer.swift
Sources/SystemExtras/: CMakeLists.txt  Clock.swift  Constants.swift  FileAtOperations.swift  FileOperations.swift  Syscalls.swift  ThrowingDefer.swift
Sources/WAKit/Execution/: Allocation.swift  Execution.swift  Instances.swift  Instantiation.swift  Invocation.swift  NumericOperations.swift  Runtime.swift  Stack.swift  Store.swift  Trap.swift
Sources/WAKit/Types/: Instruction.swift  Module.swift  Runtime.swift  Types.swift
Sources/WAKit/Utils/: AutoEquatable.swift
Sources/WASI/: CMakeLists.txt  Clock.swift  FileSystem.swift  GuestMemorySupport.swift  Poll.swift  RandomBufferGenerator.swift  WASI.swift  WASIBridgeToHost.swift
Sources/WASIBase/: WASI.swift
Sources/WAT/: BinaryInstructionEncoder.swift  CMakeLists.txt  ComponentModel.swift  ComponentWAT.swift  Encoder.swift  InstructionEncoder.swift  Lexer.swift  Location.swift  NameMapping.swift  ParseInstruction.swift  ParseTextInstruction.swift  Parser.swift  WAT.swift  WatParserError.swift
Sources/WAVE/: WAVEFormatter.swift  WAVELexer.swift  WAVEParser.swift
Sources/WIT/: AST.swift  ASTVisitor.swift  Diagnostics.swift  Lexer.swift  PackageResolver.swift  SyntaxNode.swift  WITFormatter.swift  WITTypeConverter.swift
Sources/WITExtractor/: DeclInventory.swift  Diagnostic.swift  InlineClosure.swift  ModuleTranslation.swift  SourcePrinter.swift  SourceSummary.swift  SwiftAPIDigester.swift  SyntaxSelection.swift  TypeMapping.swift  TypeResolver.swift  WITBuilder.swift  WITDeclCollector.swift  WITExtractor.swift  WITSymbolTable.swift  WITSymbolTableBuilder.swift
Sources/WITMacroPlugin/: WITMacro.swift  WITMacroProvider.swift
Sources/WITMarker/: WITMarker.swift
Sources/WITOverlayGenerator/: DefinitionMapping.swift  SourcePrinter.swift  WITOverlayGen.swift
Sources/WITTool/: Utilities.swift  WITTool.swift
Sources/WasmKit/: CMakeLists.txt  DebuggerInstructionMapping.swift  Engine.swift  Imports.swift  Module.swift  ModuleParser+FileSystem.swift  ModuleParser.swift  ResourceLimiter.swift  SIMDOpcode.swift  Translator.swift  Validator.swift  WasmKitError.swift
Sources/WasmKitGDBHandler/: DebuggerMemoryCache.swift  DebuggerMemoryView.swift  LICENSE.txt  MemoryAlignment.swift  WasmKitDebugger.swift  WasmKitGDBHandler.swift  WasmKitHandler.swift
Sources/WasmKitLLDBHandler/: WasmKitHandler.swift
Sources/WasmKitWASI/: CMakeLists.txt  WASIBridgeToHost+WasmKit.swift  WASIThreadManager.swift
Sources/WasmParser/: BinaryInstructionDecoder.swift  CMakeLists.txt  Component.swift  ComponentParser.swift  FileHandleStream.swift  InstructionCode.swift  InstructionVisitor.swift  LEB.swift  MemoryBuffer.swift  Parser+Streaming.swift  ParsingLimits.swift  SectionSkim.swift  WasmKitError.swift  WasmParser.swift  WasmParserError.swift  WasmTypes.swift
Sources/WasmParserCore/: BinaryInstructionDecoder.swift  CMakeLists.txt  ComponentParser.swift  InstructionVisitor.swift  LEB.swift  ParsingLimits.swift  WasmKitError.swift  WasmParserCore.swift  WasmParserError.swift  WasmTypes.swift
Sources/WasmTools/: WasmTools.swift
Sources/WasmTypes/: CMakeLists.txt  GuestMemory.swift  Location.swift  WasmTypes.swift
Sources/_CWasmKit/: CMakeLists.txt  TrapGuard.c  _CWasmKit.c
Sources/wasm-component-ld/: main.c  wasm-component-ld.h
Sources/wasmkit-gdb-tool/: Entrypoint.swift
Sources/wasmkit-lldb/: Entrypoint.swift
(+504 files in other folders)
