add_subdirectory(_CWasmKit)
add_subdirectory(WasmKit)
add_subdirectory(WasmKitWASI)
add_subdirectory(SystemExtras)
add_subdirectory(WASI)
add_subdirectory(WasmTypes)
add_subdirectory(WasmParser)
add_subdirectory(WAT)

if(WASMKIT_BUILD_CLI)
  add_subdirectory(CLI)
  add_subdirectory(CLICommands)
endif()
